Continuação da estilização

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <img src="assets/images/legpress.jpg" alt="Mulher se exercitando">
                     </div>
                     <div class="content">
-                        <img src="assets/images/mulhericon.png" alt="" width="130px">
+                        <img src="assets/images/mulhericon.png" alt="" width="95px">
                         <h3>Mulheres</h3>
                         <p>Falar mais sobre</p>
                         <a href="#" class="btn">Ler Mais</a>
@@ -141,12 +141,12 @@
                 <p> <i class="fas fa-check"></i> Levantamento de peso </p>
                 <p> <i class="fas fa-check"></i> Planos alimentares </p>
                 <p> <i class="fas fa-check"></i> Acompanhamento especializado de resultados </p>
-                <a href="#">Todos os valores</a>
+                <a href="#" class="btn">Todos os valores</a>
             </div>
 
-            <div class="plan-basic">
-                <h3>Plano Básico</h3>
-                <div class="price"><span>R$</span><span>90</span><span>/mês</span></div>
+            <div class="plan basic">
+                <h3>Plano <span>Básico</span></h3>
+                <div class="price"><span>R$</span>90<span>/mês</span></div>
                 <div class="list">
                     <p> <i class="fas fa-check"></i> Treinador </p>
                     <p> <i class="fas fa-check"></i> Exercícios aeróbicos </p>
@@ -157,9 +157,9 @@
                 <a href="#" class="btn">Quero</a>
             </div>
 
-            <div class="plan-premium">
-                <h3>Plano Premium</h3>
-                <div class="price"><span>R$</span><span>110</span><span>/mês</span></div>
+            <div class="plan">
+                <h3>Plano <span>Premium</span></h3>
+                <div class="price"><span>R$</span>110<span>/mês</span></div>
                 <div class="list">
                     <p> <i class="fas fa-check"></i> Treinador </p>
                     <p> <i class="fas fa-check"></i> Exercícios aeróbicos </p>
