CSS finalizado e JS iniciado

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <img src="assets/images/blog1.jpg" alt="">
                         </div>
                         <div class="content">
-                            <div class="link"><a href="#">por VEJA Rio</a> <span>|</span> <a href="#">17/01/2025</a></div>
+                            <div class="link"><a href="https://vejario.abril.com.br/" target="_blank">por VEJA Rio</a> <span>|</span> <a href="#blogs">17/01/2025</a></div>
                             <h3>Musculação e treinamentos de força tradicionais são tendências fitness</h3>
                             <p>Entre as apostas da respeitada associação americana de medicina do esporte são as chamadas terapias de recuperação</p>
                             <a href="https://vejario.abril.com.br/vida-leve/musculacao-treinamentos-forca-tendencias-fitness" target="_blank" class="btn">Ler Mais</a>
@@ -322,7 +322,7 @@
                             <img src="assets/images/blog2.jpg" alt="">
                         </div>
                         <div class="content">
-                            <div class="link"><a href="#">por UOL</a> <span>|</span> <a href="#">13/01/2025</a></div>
+                            <div class="link"><a href="https://www.uol.com.br/" target="_blank">por UOL</a> <span>|</span> <a href="#blogs">13/01/2025</a></div>
                             <h3>Quantas vezes por semana preciso fazer musculação para ver resultados?</h3>
                             <p>Saiba o que os especialistas dizem sobre o volume de treino semanal.</p>
                             <a href="https://www.uol.com.br/vivabem/amp-stories/quantas-vezes-por-semana-preciso-fazer-musculacao-para-ver-resultados.htm" target="_blank" class="btn">Ler Mais</a>
@@ -334,7 +334,7 @@
                             <img src="assets/images/blog3.jpg" alt="">
                         </div>
                         <div class="content">
-                            <div class="link"><a href="#">por Catraca Livre</a> <span>|</span> <a href="#">17/01/2025</a></div>
+                            <div class="link"><a href="https://catracalivre.com.br/" target="_blank">por Catraca Livre</a> <span>|</span> <a href="#blogs">17/01/2025</a></div>
                             <h3>Musculação melhora a saúde mental de idosos</h3>
                             <p>Estudo brasileiro mostra que a musculação pode melhorar a saúde mental de idosos, diminuindo sintomas de ansiedade e depressão.</p>
                             <a href="https://catracalivre.com.br/saude-bem-estar/musculacao-melhora-a-saude-mental-de-idosos/" target="_blank" class="btn">Ler Mais</a>
@@ -351,12 +351,12 @@
         <div class="box-container">
             <div class="box">
                 <h3>Links Rápidos</h3>
-                <a href="#home">Início</a>
-                <a href="#about">Sobre</a>
-                <a href="#features">Características</a>
-                <a href="#pricing">Valores</a>
-                <a href="#trainers">Treinadores</a>
-                <a href="#blogs">Notícias</a>
+                <a class="links" href="#home">Início</a>
+                <a class="links" href="#about">Sobre</a>
+                <a class="links" href="#features">Características</a>
+                <a class="links" href="#pricing">Valores</a>
+                <a class="links" href="#trainers">Treinadores</a>
+                <a class="links" href="#blogs">Notícias</a>
             </div>
             <div class="box">
                 <h3>Horário de funcionamento</h3>
@@ -390,6 +390,6 @@
         </div>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
