--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MosterFit</title>
     <link rel="stylesheet" href="assets/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 <body>
     <!--Cabeçalho e menu de navegação-->
@@ -390,6 +390,7 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/script.js"></script>
 </body>
 </html>
