--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         </div>
                         <div class="content">
                             <div class="link"><a href="https://catracalivre.com.br/" target="_blank">por Catraca Livre</a> <span>|</span> <a href="#blogs">17/01/2025</a></div>
-                            <h3>Musculação melhora a saúde mental de idosos</h3>
+                            <h3>Musculaçâo melhora a saúde mental de idosos</h3>
                             <p>Estudo brasileiro mostra que a musculação pode melhorar a saúde mental de idosos, diminuindo sintomas de ansiedade e depressão.</p>
                             <a href="https://catracalivre.com.br/saude-bem-estar/musculacao-melhora-a-saude-mental-de-idosos/" target="_blank" class="btn">Ler Mais</a>
                         </div>
